--- a/angular/tpl/desktop/projectlist.html
+++ b/angular/tpl/desktop/projectlist.html
@@ -45,7 +45,7 @@
                                 <span>{{data.owner.username}}  |  Last Update: {{convertDate(data.updated_at) | dateToISO | date:'dd MMM yyyy'}}</span>
                             </div>
                             <div class="table-col">
-                                <h5>{{data.totalcost | currency}} SGD</h5>
+                                <h5>{{data.totalcost | currency}}</h5>
                                 <span>Budget / Salary</span>
                             </div>
                             <div class="table-col">
