--- a/angular/tpl/blocks/modals/commisionModal.html
+++ b/angular/tpl/blocks/modals/commisionModal.html
@@ -173,7 +173,7 @@
                   <div class="col-lg-12 col-md-12">
                      <div class="price-group">
                         <span class="price">
-                        {{commisionData.price ? (commisionData.price | currency): 'Free'}}
+                        {{commisionData.price ? ('$' + commisionData.price): 'Free'}}
                         </span>
                         <span class="price-sub" ng-if="commisionData.price > 0 && commisionData.type!='Shop'">  Per {{commisionData.periodtype}} </span>
                      </div>
