--- a/angular/tpl/desktop/projectdetails.html
+++ b/angular/tpl/desktop/projectdetails.html
@@ -66,7 +66,7 @@
                     </div>
                     <div class="feed-footer">
                         <div class="feed-footer-left">
-                            <span class="price">{{projectData.totalcost | currency}} SGD</span>
+                            <span class="price">{{projectData.totalcost | currency}}</span>
                             <span class="price-sub">&nbsp;</span>
                         </div>
                         <div class="feed-footer-right">
