--- a/angular/tpl/blocks/modals/Contents/productReject.html
+++ b/angular/tpl/blocks/modals/Contents/productReject.html
@@ -52,8 +52,8 @@
          <div class="modal-right">
             <div class="row mb-30">
                <div class="col-lg-12 col-md-12">
-                  <h4>{{ResponseData.commisionitem.productdetails.title}}</h4>
-                  <p class="secondary mt-30">{{ResponseData.commisionitem.productdetails.description}}</p>
+                  <h4 class="black">{{ResponseData.commisionitem.productdetails.title}}</h4>
+                  <p class="secondary mt-10">{{ResponseData.commisionitem.productdetails.description}}</p>
                </div>
             </div>
             <div class="row" ng-if="ResponseData.commisionitem.productdetails.type == 'Service'">
