--- a/angular/tpl/blocks/modals/collaborateresponseModal.html
+++ b/angular/tpl/blocks/modals/collaborateresponseModal.html
@@ -93,8 +93,8 @@
                   </div>
                   <div class="row mt-30">
                      <div class="col-lg-12 col-md-12">
-                        <h4>{{notificationprojectData.title}}</h4>
-                        <p class="secondary mt-30">{{notificationprojectData.description}}</p>
+                        <h4 class="black">{{notificationprojectData.title}}</h4>
+                        <p class="secondary mt-10">{{notificationprojectData.description}}</p>
                      </div>
                   </div>
                   <div class="row mt-30">
