modal more para update

--- a/angular/tpl/desktop/viewitem.html
+++ b/angular/tpl/desktop/viewitem.html
@@ -60,7 +60,7 @@
                     <span class="sub-title">{{viewData.owner.profession}}: 
                         <span class="default"> {{viewData.owner.username}} </span>
                     </span>
-                    <p>{{viewData.description}}</p>
+                    <p class="secondary">{{viewData.description}}</p>
 
                     <div class="row" ng-if="viewData.type == 'Service'">
                         <div class="col-lg-4 col-md-4" ng-if="viewData.location">
