js trim removed

--- a/angular/tpl/desktop/chats.html
+++ b/angular/tpl/desktop/chats.html
@@ -52,7 +52,7 @@
                             <a ng-click="removechat(key,data)"><i class="fa fa-minus-circle"></i></a>
                         </div>
                     </div>
-                    <div class="full-col mt-10">{{data.lastmessage | cut:true:150:'...'}}</div>
+                    <div class="full-col mt-10">{{data.lastmessage}}</div>
                 </div>
             </div>
 
