--- a/angular/tpl/desktop/usermain.html
+++ b/angular/tpl/desktop/usermain.html
@@ -39,7 +39,7 @@
                                 </accordion-heading>
                                 <div class="accordion-body">
                                     <div class="accordion-body-top">
-                                        {{feed.description | cut:true:250:''}}
+                                        {{feed.description}}
                                     </div>
                                     <div class="accordion-body-bottom">
                                         <div class="icons-left">
