--- a/angular/tpl/desktop/viewitem.html
+++ b/angular/tpl/desktop/viewitem.html
@@ -9,7 +9,7 @@
                             <img ng-src="{{IMGURL}}{{viewData.owner.avatar}}" />
                         </div>
                         <ul class="topbar-list">
-                            <li>{{viewData.owner.username | cut:true:15:''}} </li>
+                            <li>{{viewData.owner.username}} </li>
                             <li><img ng-src="{{IMGURL}}{{viewData.owner.xprank.icon}}" class="rank-icon" /> {{viewData.owner.xprank.rankname}} </li>
                         </ul>
                     </div>
