--- a/angular/tpl/blocks/popover/productpopover.html
+++ b/angular/tpl/blocks/popover/productpopover.html
@@ -20,7 +20,7 @@
       <div class="row">
             <div class="col-md-6 col-sm-6 col-lg-6">
                <h3>{{popOverData.title}} </h3>
-               <div class="description">{{popOverData.description | cut:true:100:''}}</div>               
+               <div class="description">{{popOverData.description}}</div>               
             </div>
             <div class="col-md-5 col-sm-5 col-lg-5 col-lg-offset-1 col-md-offset-1">
                <div class="col-md-6 col-sm-6 col-lg-6 mt-10 text-center br-1">
