--- a/angular/tpl/desktop/noauth/searchitem.html
+++ b/angular/tpl/desktop/noauth/searchitem.html
@@ -68,7 +68,7 @@
                                     <div class="card-img" background-image="{{data.images[0].filetype == 1 ? IMGURL : ''}}{{data.images[0].thumbnail}}">
                                     </div>
                                     <div class="card-content">
-                                        <h4 class="word-line">{{data.title | cut:true:18:''}}</h4>
+                                        <h4 class="word-line">{{data.title}}</h4>
                                         <div class="card-info">
                                             <span class="price">{{data.price ? '$' + data.price: 'Free'}}</span>
                                             <span class="price-sub">Per {{data.periodtype}}</span>
@@ -146,7 +146,7 @@
                                 <div class="card-img" background-image="{{data.images[0].filetype == 1 ? IMGURL : ''}}{{data.images[0].thumbnail}}">
                                 </div>
                                 <div class="card-content">
-                                    <h4 class="word-line">{{data.title | cut:true:18:''}}</h4>
+                                    <h4 class="word-line">{{data.title}}</h4>
                                     <div class="card-info">
                                         <span class="price">{{data.price ? '$' + data.price: 'Free'}}</span>
                                         <span class="price-sub">Per {{data.periodtype}}</span>
@@ -222,7 +222,7 @@
                                     <div class="card-img" background-image="{{data.images[0].filetype == 1 ? IMGURL : ''}}{{data.images[0].thumbnail}}">
                                     </div>
                                     <div class="card-content">
-                                        <h4 class="word-line">{{data.title | cut:true:18:''}}</h4>
+                                        <h4 class="word-line">{{data.title}}</h4>
                                         <div class="card-info">
                                             <span class="price">{{data.price ? '$' + data.price: 'Free'}}</span>
                                             <span class="price-sub">Per {{data.periodtype}}</span>
@@ -298,7 +298,7 @@
                                     <div class="card-img" background-image="{{data.images[0].filetype == 1 ? IMGURL : ''}}{{data.images[0].thumbnail}}">
                                     </div>
                                     <div class="card-content">
-                                        <h4 class="word-line">{{data.title | cut:true:18:''}}</h4>
+                                        <h4 class="word-line">{{data.title}}</h4>
                                         <div class="card-info">
                                             <span class="price">{{data.price ? '$' + data.price: 'Free'}}</span>
                                             <span class="price-sub">Per {{data.periodtype}}</span>
@@ -343,7 +343,7 @@
                             <div class="card-img" background-image="{{data.images[0].filetype == 1 ? IMGURL : ''}}{{data.images[0].thumbnail}}">
                             </div>
                             <div class="card-content">
-                                <h4 class="word-line">{{data.title | cut:true:18:''}}</h4>
+                                <h4 class="word-line">{{data.title}}</h4>
                                 <div class="card-info">
                                     <span class="price">{{data.price ? '$' + data.price: 'Free'}}</span>
                                     <span class="price-sub">Per {{data.periodtype}}</span>
