--- a/angular/tpl/desktop/productchat.html
+++ b/angular/tpl/desktop/productchat.html
@@ -9,7 +9,7 @@
                      <img ng-src="{{IMGURL}}{{ProductViewData.owner.avatar}}" />
                   </div>
                   <ul class="topbar-list">
-                     <li>{{ProductViewData.owner.username | cut:true:15:''}} </li>
+                     <li>{{ProductViewData.owner.username}} </li>
                      <li><img ng-src="{{IMGURL}}{{ProductViewData.owner.xprank.icon}}" class="rank-icon" /> {{ProductViewData.owner.xprank.rankname}} </li>
                   </ul>
                </div>
@@ -73,7 +73,7 @@
                      <div class="avatar avatar-xs">
                         <img ng-src="{{IMGURL}}{{ProductViewData.owner.avatar}}" ui-sref="app.viewuser({'id':ProductViewData.owner.id})" ui-sref-opts="{reload: true,inherit: false,notify: true}" />
                      </div>
-                     <h5>{{ProductViewData.owner.username | cut:true:20:''}}</h5>
+                     <h5>{{ProductViewData.owner.username}}</h5>
                   </div>
                   <div class="feed-head-right">
                      <i class="fa fa-circle" ng-class="ProductViewData.owner.onlinestatus == 1 ? 'success':'error'"></i> <span>{{ProductViewData.owner.onlinestatus == 1 ? 'Online':'Offline'}}</span>
@@ -81,7 +81,7 @@
                </div>
                <div class="feed-body">
                   <h4>{{ProductViewData.title}}</h4>
-                  <p>{{ProductViewData.description | cut:true:385:''}}</p>
+                  <p>{{ProductViewData.description}}</p>
                </div>
                <div class="feed-footer">
                   <div class="feed-footer-left">
