--- a/angular/tpl/desktop/projectdetails.html
+++ b/angular/tpl/desktop/projectdetails.html
@@ -54,7 +54,7 @@
                             <div class="avatar avatar-xs">
                                 <img ng-src="{{IMGURL}}{{projectData.owner.avatar}}" ui-sref="app.viewuser({'id':projectData.owner.id})" ui-sref-opts="{reload: true,inherit: false,notify: true}"/>
                             </div>
-                            <h5>{{projectData.owner.username | cut:true:20:''}} </h5>
+                            <h5>{{projectData.owner.username}} </h5>
                         </div>
                         <div class="feed-head-right">
                             <i class="fa fa-circle" ng-class="projectData.owner.onlinestatus == 1 ? 'success':'error'"></i> <span>{{projectData.owner.onlinestatus == 1 ? 'Online':'Offline'}}</span>
@@ -62,7 +62,7 @@
                     </div>
                     <div class="feed-body">
                         <h4>{{projectData.title}}</h4>
-                        <p>{{projectData.description | cut:true:385:''}}</p>
+                        <p>{{projectData.description}}</p>
                     </div>
                     <div class="feed-footer">
                         <div class="feed-footer-left">
