--- a/angular/tpl/desktop/todos.html
+++ b/angular/tpl/desktop/todos.html
@@ -38,11 +38,11 @@
                         </div>
                         <div class="table-content">
                             <div class="table-col">
-                                <h5 ui-sref="app.viewtodo({id:data.id})" ui-sref-opts="{reload: true,inherit: false,notify: true}" class="cursor">{{data.title | cut:true:25:'..'}}</h5>
+                                <h5 ui-sref="app.viewtodo({id:data.id})" ui-sref-opts="{reload: true,inherit: false,notify: true}" class="cursor">{{data.title}}</h5>
                                 <span>{{data.type}} todo | {{convertDate(data.updated_at) | dateToISO | date:'dd MMM yyyy'}}</span>
                             </div>
                             <div class="table-col">
-                                <p style="text-align: justify;white-space: pre-wrap;">{{data.description | cut:true:120:'..'}}</p>
+                                <p>{{data.description}}</p>
                             </div>
                             <div class="table-col">
                                 <h5>Early {{data.deadline | dateToISO | date:'MMM yyyy'}}</h5>
