--- a/angular/tpl/desktop/viewfeed.html
+++ b/angular/tpl/desktop/viewfeed.html
@@ -47,7 +47,7 @@
                             <div class="avatar avatar-xs">
                                 <img ng-src="{{IMGURL}}{{feedData.owner.avatar}}" ui-sref="app.viewuser({'id':feedData.owner.id})" ui-sref-opts="{reload: true,inherit: false,notify: true}"/>
                             </div>
-                            <h5>{{feedData.owner.username | cut:true:20:''}} </h5>
+                            <h5>{{feedData.owner.username}} </h5>
                         </div>
                         <div class="feed-head-right">
                             <i class="fa fa-circle" ng-class="feedData.owner.onlinestatus == 1 ? 'success':'error'"></i> <span>{{feedData.owner.onlinestatus == 1 ? 'Online':'Offline'}}</span>
@@ -55,7 +55,7 @@
                     </div>
                     <div class="feed-body">
                         <h4>{{feedData.title}}</h4>
-                        <p>{{feedData.description | cut:true:385:''}}</p>
+                        <p>{{feedData.description}}</p>
                     </div>
                     <div class="feed-footer">
                         <div class="feed-footer-left">
