--- a/angular/tpl/desktop/wishlist.html
+++ b/angular/tpl/desktop/wishlist.html
@@ -101,7 +101,7 @@
                     <div class="card-img flat-img" background-image="{{data.product.images[0].filetype == 1 ? IMGURL:''}}{{data.product.images[0].thumbnail}}" ui-sref="app.viewitem({id:data.product.id})" ui-sref-opts="{reload: true,inherit: false,notify: true}">
                     </div>
                     <div class="card-content">
-                        <h4 class="title-default default" ui-sref="app.viewitem({id:data.product.id})" ui-sref-opts="{reload: true,inherit: false,notify: true}">{{data.product.title | cut:true:20:'...'}}</h4>
+                        <h4 class="title-default default" ui-sref="app.viewitem({id:data.product.id})" ui-sref-opts="{reload: true,inherit: false,notify: true}">{{data.product.title}}</h4>
                         <span class="sub-head">{{data.product.owner.username}} | Last Update : {{convertDate(data.product.created_at) | dateToISO | date:'dd MMM yyyy'}}</span>
                     </div>
                     <div class="card-info price-border">
@@ -122,7 +122,7 @@
                             </div>
                         </div>
                         <div class="footer-bottom">
-                            {{data.product.description | cut:true:250:'...'}}
+                            {{data.product.description}}
                         </div>
                     </div>
                 </div>
