--- a/angular/tpl/desktop/viewitem.html
+++ b/angular/tpl/desktop/viewitem.html
@@ -201,15 +201,15 @@
                             </div>
                             <div class="product-info-column contact-info-cards" ng-if="!viewData.isprivate">
                                 <div class="contact-info">
-                                    <a> Email </a>
+                                    <span>Email </span>
                                     <a href="mailto:{{viewData.email}}"><i class="fa fa-envelope"></i></a>
                                 </div>
                                 <div class="contact-info">
-                                    <a> Contact No </a>
+                                    <span> Contact No </span>
                                     <a href="tel:{{viewData.phoneno}}"><i class="fa fa-phone-square"></i></a>
                                 </div>
                                 <div class="contact-info" ng-if="viewData.orderlink">
-                                    <a href="{{viewData.orderlink}}" target="_blank"> Order Link </a>
+                                    <span> Order Link </span>
                                     <a href="{{viewData.orderlink}}" target="_blank"> <i class="fa fa-shopping-cart"></i></a>
                                 </div>
                             </div>
