pre-wrap class added

--- a/angular/tpl/blocks/modals/Contents/responseInfo.html
+++ b/angular/tpl/blocks/modals/Contents/responseInfo.html
@@ -129,7 +129,7 @@
             <div class="row mb-30">
                <div class="col-lg-12 col-md-12">
                   <h4 class="black">{{ResponseData.commisionitem.productdetails.title}}</h4>
-                  <p class="secondary mt-10">{{ResponseData.commisionitem.productdetails.description}}</p>
+                  <p class="secondary pre-wrap mt-10">{{ResponseData.commisionitem.productdetails.description}}</p>
                </div>
             </div>
             <div class="noCounterData">
