--- a/angular/tpl/blocks/modals/commisionModal.html
+++ b/angular/tpl/blocks/modals/commisionModal.html
@@ -62,7 +62,7 @@
                <div class="row mb-30">
                   <div class="col-lg-12 col-md-12">
                      <h4>{{commisionData.title}}</h4>
-                     <p class="secondary mt-30">{{commisionData.description}}</p>
+                     <p class="secondary pre-wrap mt-30">{{commisionData.description}}</p>
                   </div>
                </div>
                <div class="row" ng-if="commisionData.type == 'Service'">
