--- a/angular/tpl/desktop/noauth/viewproduct.html
+++ b/angular/tpl/desktop/noauth/viewproduct.html
@@ -4,7 +4,7 @@
                 <ng-skitter items="photos" options="skitterOption">
                         <div class="banner-content">
                             <h1>{{item.title}}</h1>
-                            <p>{{item.description}}</p>
+                            <p class="pre-wrap">{{item.description}}</p>
                             <div class="form-group">
                                 <button type="button" class="btn btn-border-white"> {{item.button}} </button>
                                 <button type="button" class="btn default-btn ml-30"> Join the club </button>
