--- a/angular/tpl/desktop/projectdetails.html
+++ b/angular/tpl/desktop/projectdetails.html
@@ -62,7 +62,7 @@
                     </div>
                     <div class="feed-body">
                         <h4>{{projectData.title}}</h4>
-                        <p>{{projectData.description}}</p>
+                        <p class="pre-wrap">{{projectData.description}}</p>
                     </div>
                     <div class="feed-footer">
                         <div class="feed-footer-left">
