--- a/angular/tpl/desktop/viewtodo.html
+++ b/angular/tpl/desktop/viewtodo.html
@@ -55,7 +55,7 @@
                     </div>
                     <div class="feed-body">
                         <h4>{{todoData.title}} ({{todoData.type}})</h4>
-                        <p>{{todoData.description}}</p>
+                        <p class="pre-wrap">{{todoData.description}}</p>
                     </div>
                     <div class="feed-footer">
                         <div class="feed-footer-left">
