--- a/angular/tpl/desktop/wishlist.html
+++ b/angular/tpl/desktop/wishlist.html
@@ -121,7 +121,7 @@
                                 <i class="fa fa-eye mr-5"></i> {{data.product.noofviews | shortNumber}}
                             </div>
                         </div>
-                        <div class="footer-bottom">
+                        <div class="footer-bottom pre-wrap">
                             {{data.product.description}}
                         </div>
                     </div>
