--- a/angular/tpl/blocks/modals/Contents/productReject.html
+++ b/angular/tpl/blocks/modals/Contents/productReject.html
@@ -53,7 +53,7 @@
             <div class="row mb-30">
                <div class="col-lg-12 col-md-12">
                   <h4 class="black">{{ResponseData.commisionitem.productdetails.title}}</h4>
-                  <p class="secondary mt-10">{{ResponseData.commisionitem.productdetails.description}}</p>
+                  <p class="secondary pre-wrap mt-10">{{ResponseData.commisionitem.productdetails.description}}</p>
                </div>
             </div>
             <div class="row" ng-if="ResponseData.commisionitem.productdetails.type == 'Service'">
