--- a/angular/tpl/blocks/modals/collaborateresponseModal.html
+++ b/angular/tpl/blocks/modals/collaborateresponseModal.html
@@ -94,7 +94,7 @@
                   <div class="row mt-30">
                      <div class="col-lg-12 col-md-12">
                         <h4 class="black">{{notificationprojectData.title}}</h4>
-                        <p class="secondary mt-10">{{notificationprojectData.description}}</p>
+                        <p class="secondary mt-10 pre-wrap">{{notificationprojectData.description}}</p>
                      </div>
                   </div>
                   <div class="row mt-30">
