--- a/angular/tpl/desktop/productchat.html
+++ b/angular/tpl/desktop/productchat.html
@@ -81,7 +81,7 @@
                </div>
                <div class="feed-body">
                   <h4>{{ProductViewData.title}}</h4>
-                  <p>{{ProductViewData.description}}</p>
+                  <p class="pre-wrap">{{ProductViewData.description}}</p>
                </div>
                <div class="feed-footer">
                   <div class="feed-footer-left">
