--- a/angular/tpl/desktop/search.html
+++ b/angular/tpl/desktop/search.html
@@ -89,7 +89,7 @@
                         </div>
                         <div class="feed-body">
                             <h4>{{viewData.title}}</h4>
-                            <p>{{viewData.description}}</p>
+                            <p class="pre-wrap">{{viewData.description}}</p>
                         </div>
                         <div class="feed-footer top-feed-footer">
                             <div class="feed-footer-left">
