--- a/angular/tpl/desktop/viewfeed.html
+++ b/angular/tpl/desktop/viewfeed.html
@@ -55,7 +55,7 @@
                     </div>
                     <div class="feed-body">
                         <h4>{{feedData.title}}</h4>
-                        <p>{{feedData.description}}</p>
+                        <p class="pre-wrap">{{feedData.description}}</p>
                     </div>
                     <div class="feed-footer">
                         <div class="feed-footer-left">
