--- a/angular/tpl/desktop/usermain.html
+++ b/angular/tpl/desktop/usermain.html
@@ -74,7 +74,9 @@
 
             <div class="row mt-15">
                 <div class="col-lg-12 col-md-12 text-center">
-                    <h1>The Platform for Entrepreneur to Collaborate and Do Business</h1>
+                    <div class="white-bg p-20">
+                        <h1>The Platform for Entrepreneur to Collaborate and Do Business</h1>
+                    </div>
                 </div>
             </div>
             
