search update css

--- a/angular/tpl/desktop/search.html
+++ b/angular/tpl/desktop/search.html
@@ -81,7 +81,7 @@
                 </div>
             </div>
              <div class="content-detail-right">
-                    <div class="feeds-wrapper">
+                    <div class="feeds-wrapper search-right-wrapper">
                         <div class="feed-head">
                             <div class="feed-head-left">
                                 <div class="avatar avatar-xs">
